# iotpos

./: CHANGELOG  CMakeLists.txt  CMakeLists.txt~  COPYING  INSTALL  NOTES  README  USING  index.html  install.sh  params.json
dataAccess/: azahar.cpp  azahar.h
database_resources/: CMakeLists.txt  README  README-TAXMODELS  fix_0.8.sql  fix_0.9.2.sql  fix_0.9.3.sql  fix_0.9.3rc.sql  fix_0.9.4rc8.sql  fix_0.9.5.0.sql  fix_0.9.sql  fix_0.98.sql  fix_reservations.sql  fix_roles.sql  iotpos_mysql.sql  iotposdb.sql  lemon_mysql.sql  lemon_mysql_real.sql  lemondb.sql  mexico_taxes.sql
doc/: README
doc/sources/: IoTPos_quick_tasks__en.odt  IoTPos_shortcuts__en.odt  Iotpos_quick_tasks_shortcut_es.odt  lemon_quick_tasks__en.odt  lemon_quick_tasks__es.odt  lemon_shortcuts__en.odt  lemon_shortcuts__es.odt
icons/: CMakeLists.txt
images/: CMakeLists.txt  README
iotpos-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  iotpos.cbp
iotpos-build/CMakeTmp/: check_qt_application.cpp
iotpos-build/database_resources/: CTestTestfile.cmake  Makefile  cmake_install.cmake
iotpos-build/icons/: CTestTestfile.cmake  Makefile  cmake_install.cmake
iotpos-build/images/: CTestTestfile.cmake  Makefile  cmake_install.cmake
iotpos-build/iotstock/: CTestTestfile.cmake  Makefile  cmake_install.cmake  iotstock.cbp
iotpos-build/src/: CTestTestfile.cmake  Makefile  azahar.moc  ca.gmo  clienteditor.moc  cmake_install.cmake  cz.gmo  de.gmo  dialogclientdata.moc  es.gmo  inputdialog.moc  iotpos.moc  iotpos.shell  iotpos_automoc.cpp  iotpos_automoc.cpp.files  iotposview.moc  loginwindow.moc  moc_bundlelist.cpp  moc_mibitfloatpanel.cpp  moc_mibitlineedit.cpp  moc_mibitnotifier.cpp  moc_mibitpassworddlg.cpp  moc_mibittip.cpp  moc_refacturar.cpp  moc_reservations.cpp  moc_resume.cpp  moc_saleqtydelegate.cpp  moc_soselector.cpp  moc_sostatus.cpp  pricechecker.moc  productdelegate.moc  settings.cpp  settings.h  specialordereditor.moc  ticketpopup.moc  ui_checker.h  ui_datoscliente.h  ui_editclient_widget.h  ui_facturas_data.h  ui_mainview.h  (+13 more)
iotpos-build/styles/: CTestTestfile.cmake  Makefile  cmake_install.cmake
iotstock/: CMakeLists.txt
iotstock/doc/: index.docbook
iotstock/icons/: README
iotstock/images/: CMakeLists.txt~
iotstock/src/: CMakeLists.txt  clienteditor.cpp  clienteditor.h  dialogseriefolios.cpp  dialogseriefolios.h  iotstock.cpp  iotstock.desktop  iotstock.h  iotstock.kcfg  iotstock.notifyrc  iotstock.notifyrc~  iotstockui.rc  iotstockui.rc~  iotstockview.cpp  iotstockview.h  main.cpp  offersdelegate.cpp  offersdelegate.h  producteditor.cpp  producteditor.h  promoeditor.cpp  promoeditor.h  providerseditor.h  purchaseeditor.cpp  purchaseeditor.h  settings.kcfgc  squeezeui.rc~  subcategoryeditor.cpp  subcategoryeditor.h  usereditor.cpp  usereditor.h  usersdelegate.cpp  usersdelegate.h
iotstock/src/po/: es.po  es.po~  fr.po  messages.sh  pt_BR.po
iotstock/src/ui/: editclient_widget.ui  editfolios.ui  editpromo_widget.ui  edituser_widget.ui  iotstockview_base.ui  pref_printers.ui  prefs_base.ui  producteditor.ui  promo.ui  purchaseeditor.ui  subcategoryeditor.ui
iotstock/style/: CMakeLists.txt
maintainScripts/: adding_field-table.txt  cambia-copyright.sh  cambia-mail.sh  prepareSrc  remove-fuzzy.sh  removing_field-table.txt
mibitWidgets/: README  mibitdialog.cpp  mibitdialog.h  mibitfloatpanel.cpp  mibitfloatpanel.h  mibitlineedit.cpp  mibitlineedit.h  mibitnotifier.cpp  mibitnotifier.h  mibitpassworddlg.cpp  mibitpassworddlg.h  mibittip.cpp  mibittip.h
printing/: print-cups.cpp  print-cups.h  print-dev.cpp  print-dev.h  spool
py-thermal-printer-master/: README.md  lprint.py  printer.py  printer2.py  printer2.py.save  printerlabel.py
scripts/: corte.sh  corteMail.sh  dropbox.sh  pulse.py  pulse.sh  pulse2.py  push.py  spool~
squeeze/: CMakeLists.txt
squeeze/doc/: CMakeLists.txt
squeeze/icons/: CMakeLists.txt
squeeze/images/: CMakeLists.txt
squeeze/src/: CMakeLists.txt  CMakeLists.txt.autosave  CMakeLists.txt~  dialogseriefolios.cpp  iotstock.desktop  main.cpp  offersdelegate.cpp  producteditor.cpp  producteditor.h  promoeditor.cpp  promoeditor.h  providerseditor.cpp  purchaseeditor.cpp  purchaseeditor.h  settings.kcfgc  squeeze.cpp  squeeze.desktop  squeeze.h  squeeze.kcfg  squeezeview.cpp  squeezeview.h  subcategoryeditor.cpp  subcategoryeditor.h  usereditor.cpp  usersdelegate.cpp  usersdelegate.h
squeeze/src/po/: ca.po  cz.po  de.po  es.po  es.po.bak  remove-fuzzy.sh  squeeze.pot  zh.po
squeeze/src/ui/: edituser_widget.ui  pref_printers.ui  prefs_db.ui  producteditor.ui  producteditor.ui.autosave  providerseditor.ui  squeezeview_base.ui  subcategoryeditor.ui
squeeze/style/: CMakeLists.txt
src/: BasketPriceCalculationService.cpp  BasketPriceCalculationService.h  CMakeLists.txt  bundlelist.cpp  bundlelist.h  dialogclientdata.cpp  dialogclientdata.h  enums.h  gaveta.cpp  gaveta.h  hash.cpp  hash.h  inputdialog.cpp  inputdialog.h  iotpos.cpp  iotpos.desktop  iotpos.h  iotpos.kcfg  iotpos.notifyrc  iotpos.notifyrc~  iotposrc  iotposui.rc  iotposui.rc~  iotposview.cpp  iotposview.cpp.autosave  iotposview.h  lemon.cpp  lemon.desktop  lemon.desktop.desktop  lemon.h  lemon.kcfg  lemon.notifyrc  lemonrc  lemonview.cpp  lemonview.cpp.autosave  lemonview.h  loginwindow.cpp  loginwindow.h  main.cpp  misc.cpp  (+25 more)
src/nouns/: BasketEntryPriceSummary.cpp  BasketEntryPriceSummary.h  BasketPriceSummary.cpp  BasketPriceSummary.h  Currency.cpp  Currency.h  User.cpp  User.h
src/po/: ca.po  cz.po  de.po  es.po  es.po~  fr.po  iotpos.pot  lemon.pot  messages.sh  zh.po
src/ui/: checker.ui  datoscliente.ui  facturas_data.ui  mainview.qrc  mainview.ui  mainview.ui.autosave  pref_printers.ui  pref_printers.ui.autosave  pref_security.ui  pref_style.ui  prefs_base.ui  prefs_db.ui  printticket.ui  refacturar.ui  reservations.ui  resume.ui  soselector.ui  sostatus.ui  special_order.ui  store_data.ui
styles/: CMakeLists.txt
styles/elegant/: CMakeLists.txt  elegant.qss
styles/simple/: CMakeLists.txt  simple.qss
(+73 files in other folders)
