install( FILES
        backg.png
        button.png
        button_hover.png
        checkbox_off.png
        checkbox_on.png
        checks_bg.png
        editbox.png
        groupbox.png
        headers.png
        headerview.png
        headerview_hover.png
        hgroupbox.png
        loginBackground.png
        passwordBackground.png
        passwordBackground_wide.png
        radiobutton_off.png
        radiobutton_on.png
        tira.png
        dialog.png
        elegant.qss
        DESTINATION  ${DATA_INSTALL_DIR}/iotpos/styles/elegant/ )
