install( FILES
         backg.png
         loginBackground_1280x800.png
         loginBackground_1024x768.png
         loginBackground_1366x768.png
         passwordBackground.png
         pricechecker.png
         priceCheckerBack.png
         dialog.png
         simple.qss
        DESTINATION  ${DATA_INSTALL_DIR}/lemon/styles/simple/ )
